--- a/.github/workflows/airflow_dags_ci.yml
+++ b/.github/workflows/airflow_dags_ci.yml
@@ -6,8 +6,12 @@ name: Airflow Dags CI
 on:
   push:
     branches: [ "main" ]
+    paths:
+      - 'airflow/dags/**'
   pull_request:
     branches: [ "main" ]
+    paths:
+      - 'airflow/dags/**'
 
   workflow_dispatch:
 
@@ -30,7 +34,6 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
         pip install -r airflow/requirements.txt
         
     - name: Lint with flake8
