--- a/airflow/requirements.txt
+++ b/airflow/requirements.txt
@@ -4,7 +4,6 @@ mccabe==0.7.0
 pycodestyle==2.11.1
 pyflakes==3.1.0
 apache-airflow==2.8.0
-apache-airflow-providers-google==10.12.0
 pendulum==2.0.0
-apache-airflow-providers-amazon==8.15.0
 psycopg2==2.9.9
+pykrx
