fix: Update airflow_dags_ci.yml

--- a/.github/workflows/airflow_dags_ci.yml
+++ b/.github/workflows/airflow_dags_ci.yml
@@ -8,10 +8,14 @@ on:
     branches: [ "main" ]
     paths:
       - 'airflow/dags/**'
+      - 'tests/**'
+      - '.github/workflows/**'
   pull_request:
     branches: [ "main" ]
     paths:
       - 'airflow/dags/**'
+      - 'tests/**'
+      - '.github/workflows/**'
 
   workflow_dispatch:
 
