fix: Update django_ci.yml for finding manage.py

--- a/.github/workflows/django_ci.yml
+++ b/.github/workflows/django_ci.yml
@@ -30,4 +30,4 @@ jobs:
         pip install -r web/requirements.txt
     - name: Run Tests
       run: python manage.py test
-      working-directory: web
+      working-directory: web/stock_data_flow
