env: Connect Google Cloud SQL as database

--- a/.github/workflows/django_ci.yml
+++ b/.github/workflows/django_ci.yml
@@ -21,6 +21,7 @@ jobs:
       SECRET_KEY: ${{ secrets.SECRET_KEY }}
       DATABASE_USER: ${{ secrets.DATABASE_USER }}
       DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
+      DATABASE_HOST: ${{ secrets.DATABASE_HOST }}
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python 3.12
