--- a/.github/workflows/airflow_dags_ci.yml
+++ b/.github/workflows/airflow_dags_ci.yml
@@ -39,6 +39,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r airflow/requirements.txt
+
+    - name: Initialize Airflow DB
+      run: airflow db init
         
     - name: Lint with flake8
       run: |
