--- a/.github/workflows/airflow_dags_ci.yml
+++ b/.github/workflows/airflow_dags_ci.yml
@@ -5,17 +5,17 @@ name: Airflow Dags CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
     paths:
-      - 'airflow/dags/**'
-      - 'tests/**'
-      - '.github/workflows/**'
+      - "airflow/dags/**"
+      - "tests/**"
+      - ".github/workflows/**"
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
     paths:
-      - 'airflow/dags/**'
-      - 'tests/**'
-      - '.github/workflows/**'
+      - "airflow/dags/**"
+      - "tests/**"
+      - ".github/workflows/**"
 
   workflow_dispatch:
 
@@ -24,30 +24,30 @@ permissions:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     env:
       AIRFLOW_HOME: ${{ github.workspace }}/airflow
     steps:
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v3
-      with:
-        python-version: "3.10"
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.10"
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r airflow/requirements.txt
-        
-    - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 airflow/dags/ --count --select=E9,F63,F7,F82 --show-source --statistics
-        # ignore the "line too long" (E501) error
-        flake8 airflow/dags/ --count --ignore=E501,E123 --max-complexity=10 --statistics
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r airflow/requirements.txt
 
-    - name: Run tests
-      run: |
-        pytest tests/
+      - name: Lint with flake8
+        run: |
+          # stop the build if there are Python syntax errors or undefined names
+          flake8 airflow/dags/ --count --select=E9,F63,F7,F82 --show-source --statistics
+          # ignore the "line too long" (E501) error
+          flake8 airflow/dags/ --count --ignore=E501,E123 --max-complexity=10 --statistics
+
+      - name: Run tests
+        run: |
+          export PYTHONPATH=${PYTHONPATH}:${AIRFLOW_HOME}/plugins
+          pytest tests/
